<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_LogoutMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/msg_logout"
        android:textSize="18sp" />

    <TableRow
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_LogoutYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/btn_Yes"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_LogoutNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/btn_No"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </TableRow>
</LinearLayout>
