<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.TripsFragment"
    android:background="@color/colorPrimaryDark">
    <TableRow
        android:background="@drawable/card_background"
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linLay_All"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_All"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/all_trips"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_All"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linLay_Running"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Running"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/running_trips"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_Running"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linLay_Delivery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_Delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/delivered_trips"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_Delivery"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:visibility="gone" />
        </LinearLayout>
    </TableRow>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />




</androidx.constraintlayout.widget.ConstraintLayout>